# abdes1

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
abdes1/: __init__.py
abdes1/actors/: __init__.py  actor.py  message.py  process.py  resource.py
abdes1/core/: __init__.py  actor_protocol.py  actor_system.py  event.py  event_loop.py  event_loop_protocol.py  message_logger.py  registry.py
abdes1/des/: __init__.py  des_actor.py  des_arrivals.py  des_event_loop.py  generator.py  load_generator_actor.py  queue_actor.py  server_actor.py
abdes1/utils/: __init__.py  logger.py  logging.py  random_generators.py  statistics.py  validation.py
examples/: __init__.py  advanced_example.py  console.py  interactive.py  simulation_1.md  simulation_1.py  simulation_md
examples/interactive/: console.py  interactive.py
examples/mm1/: mm1.py  simulation_1.md  simulation_1.py
examples/mm1_actors/: __init__.py  load_generator_actor.py  mm1_actors.py  mm1_actors_config.json  queue_actor.py  server_actor.py  stats_actor.py
tests/integration/: test_queue-actor.py
tests/unit/: test_actors.py
